@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-15T16:14:55Z",
+  "timestamp" : "2023-07-17T08:17:19Z",
   "count_outdated" : 129,
   "uniques_outdated" : 109,
-  "count" : 151,
-  "uniques" : 126,
+  "count" : 152,
+  "uniques" : 127,
   "clones" : [
     {
       "timestamp": "2023-07-05T00:00:00Z",
@@ -70,6 +70,15 @@
     },
     {
       "timestamp": "2023-07-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-17T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
