@@ -1,5 +1,5 @@
 {
-  "count": 22,
+  "count": 23,
   "uniques": 12,
   "clones": [
     {
@@ -39,6 +39,11 @@
     },
     {
       "timestamp": "2023-07-15T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-17T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
