@@ -1,3 +1,12 @@
+2023-07-17T08:17:19Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5573326324 # 998
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-17
+* notice: last 14d: unq all: 12 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 109 129 / 126 151
+* notice: next accum: outdated-unq outdated-all / unq all: 109 129 / 127 152
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-07-17]
+
 2023-07-15T16:14:55Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5563103114 # 993
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-15
